multi files upload

--- a/.env
+++ b/.env
@@ -1,3 +1,4 @@
 SQLALCHEMY_DATABASE_URL=sqlite:///E:\\Explore\\TricklePackage\\trickle.db
 SECRET_KEY=SECRET_KEY_FOR_TRICKLE
 AUTHMIDDLE_EXCEPT_DOMAIN=/api/users;/api/DataBase
+IMAGE_STORE_PATH=E:\\Explore\\TricklePackage\\Images\\
